--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,10 +11,12 @@
 
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
-
+      <%= f.label :age%>
+      <%= f.text_field :age, class: 'form-control' %>
+      <%= f.label :phone%>
+      <%= f.text_field :phone, class: 'form-control' %>
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
-
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
