--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% if logged_in? %>
+  <h1>Welcome to the HK Travel</h1>
+<% else %>
+  <div class="center jumbotron">
+    <h1>Welcome to the HK Travel</h1>
+    <h2>
+      This is the home page for the
+      <a>HK Travel</a>
+      sample application.
+    </h2>
+
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+<% end %>
