--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,12 @@
   <div class="container">
     <%= link_to "sample app", root_path, id: "logo" %>
     <nav>
+    <div>
+      <form class="form-inline my-2 my-lg-0" action="/search">
+        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
