--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,16 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <%= link_to "sample app", root_path, id: "logo" %>
-    <nav>
     <div>
-      <form class="form-inline my-2 my-lg-0" action="/search">
-        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+      <form class="active-pink-3 active-pink-4 mb-7" action='/search'>
+        <input class="form-contrl mr-sm-8" name="q" type="text" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Review", review_path %></li>
         <% if logged_in? %>
           <%if current_user.admin?%>
             <li> <%= link_to "Users", admin_users_path %> </li>
