--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -1,4 +1,9 @@
 <% provide(:title, @tour.name) %>
 <%=  render 'tour' %>
 <%=  render 'reviews/review' %>
-<%=  link_to 'Create Review', new_tour_review_path(@tour) %>
+<br>
+<div>
+  <div class="col-md-6 col-md-offset-2">
+    <%=  link_to 'Create Review', new_tour_review_path(@tour),class: "btn btn-primary" %>
+    </div>
+</div>
