--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -2,6 +2,12 @@
   <div class="content">
       <h1> <%= r.title %> </h1>
       <strong><%= r.content %></strong>
+      <span>
+      <% if current_user?(r.user) %>
+        <%= link_to "delete", review_path(@tour), method: :delete,
+                                       data: { confirm: "You sure?" } %>
+      <% end %>
+    </span>
   </div>
   <div class="row">
     <div id="btn-like-<%= r.id %>">
